# mgroups-infra-projects-website

./: DRIVE_CONTENT_INTEGRATION.md  PASSWORD_RECOVERY_SETUP.md  PHASE_1_2_3_COMPLETION_REPORT.md  PRODUCTION_RECTIFICATION_CHECKLIST.md  PRODUCTION_REQUIRED_DETAILS.md  README.md  RENDER_ENV_SETUP.md  SCORE_AND_COMPARISON.md  STRICT_SCORE_V4.md  STRICT_SCORE_V5.md  UPDATE_RENDER_STEPS.md  V10_RUNTIME_FIX_AND_ADVANCED_CMS_REPORT.md  V11_FONT_STYLE_RUNTIME_FIX_REPORT.md  V14_4_ADMIN_USER_EDIT_DELETE_REPORT.md  V14_5_MANUAL_PASSWORD_RESET_REPORT.md  V14_6_ADMIN_SIDEBAR_UX_REPORT.md  V14_7_APP_MODULAR_REFACTOR_REPORT.md  V14_8_ADMIN_PAGE_UX_CLEANUP_REPORT.md  V14_9_LIVE_INLINE_EDITOR_REPORT.md  V15_1_CONTENT_ADMIN_UX_REPORT.md  V15_2_1_LIVE_EDITOR_SIDE_PANEL_FIX_REPORT.md  V15_2_FULL_LIVE_EDITOR_REPORT.md  V15_4_1_500_ERROR_HOTFIX_REPORT.md  V15_4_2_LIVE_EDIT_ATTRS_HOTFIX_REPORT.md  V15_4_PORTAL_LOGIN_WORKSPACE_REPORT.md  V15_5_USER_ACCESS_ROLE_PERMISSION_MATRIX_REPORT.md  V15_6_1_PORTAL_MODULE_LOGIC_FIX_REPORT.md  V15_6_3_PORTAL_SEPARATION_SECURITY_FIX_REPORT.md  V15_6_4_PORTAL_CHILD_PERMISSION_FIX_REPORT.md  V15_6_SPEED_OPTIMIZATION_REPORT.md  V15_7_1_STOCK_ADMIN_PERMISSION_HOTFIX_REPORT.md  V15_7_2_STOCK_TEMPLATE_PATH_HOTFIX_REPORT.md  V15_7_STOCK_MODULE_INTEGRATION_BASE_REPORT.md  V15_DESIGN_CENTER_UX_REPORT.md  V16_2_PREMIUM_3D_OWNER_UI_REPORT.md  V16_3_GST_AUDIT_PORTAL_INTEGRATION_REPORT.md  V16_4_EMPLOYEE_PORTAL_INTEGRATION_REPORT.md  V6_PRIVACY_FULL_ADMIN_REPORT.md  V7_FIELD_VISIBILITY_REPORT.md  V8_ADVANCED_CMS_ADMIN_REPORT.md  (+6 more)
modules/gst_audit/: GSTInvoiceAudit.spec  README.md  RUN_WEB_GST_AUDIT.bat  START_GST_AUDIT_PRO.bat  (+8 more)
(+442 files in other folders)
